--- a/tasks/prepare_os.yml
+++ b/tasks/prepare_os.yml
@@ -51,18 +51,22 @@
     dest=/etc/hosts
     regexp='127\.0\.0\.1 {{ inventory_hostname }}'
     state=absent
+  when: prepare_os_network
 
 - name: Update /etc/hosts
   lineinfile: dest=/etc/hosts regexp='.*{{item.fqdn}}$' line='{{item.ip}} {{item.fqdn}} {{item.shortname}}' state=present
   with_items: "{{ hostnames }}"
   tags:
     - hosts
+  when: prepare_os_network
 
 - name: full fqdn
   shell: "hostnamectl set-hostname {{inventory_hostname}} --static"
+  when: prepare_os_network
 
 - name: short fqdn
   shell: "shortname=`cut -d '.' -f 1 <<< {{inventory_hostname}}`; hostnamectl set-hostname $shortname --transient"
+  when: prepare_os_network
 
 ## Hadoop Group
 - name: Add group "hadoop"
