--- a/tasks/prepare_os.yml
+++ b/tasks/prepare_os.yml
@@ -44,6 +44,66 @@
 - name: pass kernel option
   shell: sysctl -p /etc/sysctl.d/kernel-custom.conf
 
+- name: Disable firewalld
+  service: name=firewalld state=stopped enabled=no
+
+- sysctl:
+    name: vm.swappiness
+    value: 0
+    sysctl_set: yes
+    state: present
+    reload: yes
+
+- sysctl:
+    name: vm.overcommit_memory
+    value: 1
+    sysctl_set: yes
+    state: present
+    reload: yes
+
+- sysctl:
+    name: net.core.somaxconn
+    value: 1024
+    sysctl_set: yes
+    state: present
+    reload: yes
+
+- sysctl:
+    name: net.ipv4.ip_local_port_range
+    value: 10000 65000
+    sysctl_set: yes
+    state: present
+    reload: yes
+
+    #  - sysctl:
+    #      name: net.ipv6.conf.all.disable_ipv6
+    #      value: 1
+    #      sysctl_set: yes
+    #      state: present
+    #      reload: yes
+  
+    #  - sysctl:
+    #      name: net.ipv6.conf.default.disable_ipv6
+    #      value: 1
+    #      sysctl_set: yes
+    #      state: present
+    #      reload: yes
+
+- name: Add umask
+  lineinfile:
+    path: /etc/profile
+    line: "umask 0022"
+
+- pam_limits:
+    domain: '*'
+    limit_type: '-'
+    limit_item: nofile
+    value: 32768
+- pam_limits:
+    domain: '*'
+    limit_type: '-'
+    limit_item: nproc
+    value: 65536
 # Network settings
 
 - name: Remove 127.0.0.1 "hostname" from /etc/hosts
