tasks.prepare_os: update with ansible official reboot module

--- a/tasks/prepare_os.yml
+++ b/tasks/prepare_os.yml
@@ -10,7 +10,7 @@
   register: disable_selinux
 
 - name: Reboot
-  shell: shutdown -hr now
+  reboot:
   when: disable_selinux.rc == 0 and disable_selinux.rc is defined
 
 ## THP Settings
