tasks.prepare_os: replace rc with reboot_required for selinux reboot

--- a/tasks/prepare_os.yml
+++ b/tasks/prepare_os.yml
@@ -11,7 +11,7 @@
 
 - name: Reboot
   reboot:
-  when: disable_selinux.rc == 0 and disable_selinux.rc is defined
+  when: disable_selinux.reboot_required and disable_selinux.reboot_required is defined
 
 ## THP Settings
 
