--- a/tasks/prepare_os.yml
+++ b/tasks/prepare_os.yml
@@ -51,6 +51,7 @@
 
 - name: Disable firewalld
   service: name=firewalld state=stopped enabled=no
+  when: do_firewalld
 
 - sysctl:
     name: vm.swappiness
