tasks.cgroups: fix destination file name

--- a/tasks/cgroups.yml
+++ b/tasks/cgroups.yml
@@ -9,7 +9,7 @@
 - name: Copy systemd service for ambari-agent
   template:
     src: yarn.conf.j2
-    dest: /etc/cgconfig.d/yarn.conf.j2
+    dest: /etc/cgconfig.d/yarn.conf
 
 - name: Enable chkconfig
   command: chkconfig cgconfig on
