--- a/tasks/open_jdk.yml
+++ b/tasks/open_jdk.yml
@@ -1,18 +1,19 @@
 
-- name: Install open JDK
-  yum: name={{item}} state=installed
+- name: Install open JDK (RHEL 7)
+  package: name={{item}} state=installed use=yum
   with_items:
     - java-1.8.0-openjdk-devel
-  when: provider is defined and provider == 'yum' and open_jdk_version == 8
+  when: ansible_distribution == "CentOS" and ansible_distribution_major_version < '8'
 
 
-- name: Install open JDK
-  yum: name={{item}} state=installed
+- name: Install open JDK (RHEL 8)
+  package: name={{item}} state=installed use=dnf
   with_items:
-    - java-11-openjdk-devel
-  when: provider is defined and provider == 'yum' and open_jdk_version == 11
+    - java-1.8.0-openjdk-devel
+  when: (ansible_distribution == "Rocky" and ansible_distribution_major_version >= '8' ) or (ansible_distribution == "AlmaLinux"  and ansible_distribution_major_version >= '8')
 
-
-
-
-
+- name: Install open JDK (Ubuntu 22)
+  package: name={{item}} state=present use=apt
+  with_items:
+    - openjdk-8-jdk
+  when: ansible_distribution == "Ubuntu"
