--- a/tasks/prepare_fs.yml
+++ b/tasks/prepare_fs.yml
@@ -2,6 +2,9 @@
 #######################################################################
 ######################## physical volume ##############################
 ########################################################################
+- name: debug pv name
+  debug:
+    msg: "PV {{item.pv}}"
 - name: Check pv exist
   shell: pvdisplay "{{item.pv}}"
   register: pv_exist
