--- a/tasks/yum_repos.yml
+++ b/tasks/yum_repos.yml
@@ -53,7 +53,7 @@
     - net-tools
     - wget
     - epel-release
-  when: ansible_distribution == "Rocky" or ansible_distribution == "AlmaLinux" and ansible_distribution_major_version >= '8'
+  when: ansible_distribution_major_version >= '8' and ansible_distribution != "Ubuntu"
 
 
 - name: Clean DBCache
