--- a/tasks/prepare_os.yml
+++ b/tasks/prepare_os.yml
@@ -11,10 +11,11 @@
     -  python3-dnf
   when: ansible_distribution_major_version >= '8' and ansible_distribution != "Ubuntu"
 
-- name: "ROLE[prepare-system] - ACTION[prepare-os] - Set default python to python3 [ubuntu]"
-  shell: update-alternatives --install /usr/bin/python python /usr/bin/python3 1
-  when: ansible_distribution == "Ubuntu"
-
+- name: Install Python2
+  ansible.builtin.raw: yum install -y python2
+  args:
+    executable: /bin/bash
+  when: (system_major_distribution == "redhat" and ansible_distribution_major_version < '9' ) and install_python2
 
 - name: get status SELinux
   command : getenforce
@@ -71,7 +72,6 @@
   register: defrag_enabled
   ignore_errors: True
 
-<<<<<<< HEAD
 
 # - name: Disable THP
 #   shell: >
@@ -79,14 +79,6 @@
 #     echo never > /sys/kernel/mm/transparent_hugepage/defrag
 #   when: (thp_enabled.stdout == '[always]') or (thp_enabled.stdout == '[msadvise]') or (thp_enabled.stdout == '[defer]')
 
-=======
-# - name: Disable THP
-#   shell: >
-#     echo never > /sys/kernel/mm/transparent_hugepage/enabled
-#     echo never > /sys/kernel/mm/transparent_hugepage/defrag
-#   when: (thp_enabled.stdout == '[always]') or (thp_enabled.stdout == '[msadvise]') or (thp_enabled.stdout == '[defer]')
-
->>>>>>> 8c1d04d (add support for apt)
 # - name: Disable Defrag
 #   shell: >
 #     echo never > /sys/kernel/mm/transparent_hugepage/defrag
@@ -110,6 +102,21 @@
 - name: pass kernel option
   shell: sysctl -p /etc/sysctl.d/kernel-custom.conf
 
+- name: Add umask
+  lineinfile:
+    path: /etc/profile
+    line: "umask 0022"
+
+- pam_limits:
+    domain: '*'
+    limit_type: '-'
+    limit_item: nofile
+    value: 32768
+- pam_limits:
+    domain: '*'
+    limit_type: '-'
+    limit_item: nproc
+    value: 65536
 # - name: Disable firewalld
 #   service: name=firewalld state=stopped enabled=no
 #   when: do_firewalld and ansible_distribution != "Ubuntu"
