--- a/tasks/firewalld.yml
+++ b/tasks/firewalld.yml
@@ -4,3 +4,10 @@
 #     permanent: "{{item.permanent}}"
 #     state: "{{item.state}}"
 #   with_items: firewalld_rules
+
+- name: Stop and Disable firewalld
+  service:
+    name: firewalld
+    state: stopped
+    enabled: no
+  when: ansible_os_family.lower() == 'redhat' and ansible_distribution_major_version >= '9' and firewalld_enabled == False
