--- a/tasks/open_jdk.yml
+++ b/tasks/open_jdk.yml
@@ -43,4 +43,4 @@
       - openjdk-17-jdk
       - openjdk-17-jdk-devel
     when: system_major_distribution == "ubuntu"
-  when: open_jdk_version == 17
+  when: install_openjdk_17
